--- a/Weather/View/Base.lproj/Main.storyboard
+++ b/Weather/View/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,7 +14,8 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bda-bF-Pz9">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.38431372549999998" green="0.99997437" blue="0.99999129769999995" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexBackgroundColor" red="0.38431372549999998" green="0.49803921569999998" blue="0.99999129769999995" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Reuse" id="eNK-Tj-J39" customClass="ListCell" customModule="Weather" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="24.333333969116211" width="428" height="45"/>
@@ -81,6 +81,7 @@
                                         <constraint firstAttribute="bottom" secondItem="2O5-Te-D4A" secondAttribute="bottom" constant="3" id="thP-UG-j0U"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.74509803921568629" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="conditionCityLabel" destination="Vp8-8u-FZI" id="RKi-uw-WLD"/>
                                     <outlet property="nameCityLabel" destination="2oD-yx-pjZ" id="Zat-BU-qc7"/>
@@ -115,7 +116,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Qho-ax-ogE">
-                                <rect key="frame" x="127" y="150" width="174" height="252"/>
+                                <rect key="frame" x="127" y="150" width="174" height="312"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nx2-M7-qgZ">
                                         <rect key="frame" x="10" y="0.0" width="154" height="30"/>
@@ -127,15 +128,15 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gip-jB-O5R">
-                                        <rect key="frame" x="42" y="54" width="90" height="90"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <rect key="frame" x="12" y="54" width="150" height="150"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="0.3294796177" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="90" id="fYU-5X-Zd0"/>
-                                            <constraint firstAttribute="width" constant="90" id="hDA-Dz-OHI"/>
+                                            <constraint firstAttribute="height" constant="150" id="fYU-5X-Zd0"/>
+                                            <constraint firstAttribute="width" constant="150" id="hDA-Dz-OHI"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ясно" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="goW-QI-jxQ">
-                                        <rect key="frame" x="10" y="168" width="154" height="30"/>
+                                        <rect key="frame" x="10" y="228" width="154" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="RS5-OA-fAb"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="pwk-Oe-zzy"/>
@@ -145,7 +146,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="pyg-Ob-dLh">
-                                        <rect key="frame" x="56" y="222" width="62" height="30"/>
+                                        <rect key="frame" x="56" y="282" width="62" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="io0-Im-KDf">
                                                 <rect key="frame" x="0.0" y="0.0" width="31.333333333333332" height="30"/>
@@ -174,7 +175,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="V7y-S3-PAz">
-                                <rect key="frame" x="42.333333333333343" y="459.99999999999994" width="343.33333333333326" height="105.33333333333331"/>
+                                <rect key="frame" x="42.333333333333343" y="520" width="343.33333333333326" height="105.33333333333337"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ceW-Yk-MTm">
                                         <rect key="frame" x="0.0" y="0.0" width="191" height="105.33333333333333"/>
@@ -186,7 +187,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Скорость ветра:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BnS-BA-GbK">
-                                                <rect key="frame" x="0.0" y="28.333333333333314" width="129.33333333333334" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="28.333333333333371" width="129.33333333333334" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -232,7 +233,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ytt-bO-aEV">
-                                                <rect key="frame" x="0.0" y="28.333333333333314" width="73" height="20.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="28.333333333333371" width="73" height="20.333333333333329"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3H-Aw-jeQ">
                                                         <rect key="frame" x="0.0" y="0.0" width="38.333333333333336" height="20.333333333333332"/>
@@ -291,11 +292,11 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="CZd-Rg-ZRP"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="1" blue="0.32947961767236672" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Qho-ax-ogE" firstAttribute="centerX" secondItem="CZd-Rg-ZRP" secondAttribute="centerX" id="Fhg-fh-KVQ"/>
                             <constraint firstItem="V7y-S3-PAz" firstAttribute="top" secondItem="Qho-ax-ogE" secondAttribute="bottom" constant="58" id="NiV-fm-FbG"/>
-                            <constraint firstItem="Qho-ax-ogE" firstAttribute="leading" secondItem="CZd-Rg-ZRP" secondAttribute="leading" constant="127" id="iRe-6g-Dkp"/>
+                            <constraint firstItem="Qho-ax-ogE" firstAttribute="leading" relation="lessThanOrEqual" secondItem="CZd-Rg-ZRP" secondAttribute="leading" constant="127" id="iRe-6g-Dkp"/>
                             <constraint firstItem="Qho-ax-ogE" firstAttribute="top" secondItem="CZd-Rg-ZRP" secondAttribute="top" constant="62" id="rNv-pY-RlY"/>
                             <constraint firstItem="Qho-ax-ogE" firstAttribute="centerX" secondItem="V7y-S3-PAz" secondAttribute="centerX" id="vps-tq-PtZ"/>
                         </constraints>
@@ -335,9 +336,4 @@
             <point key="canvasLocation" x="-457.00934579439252" y="147.08423326133911"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
